# HSLU_Time_Series_Analysis

./: Exercise_2.ipynb  Exercise_4.ipynb  data.py  pyproject.toml  week3.ipynb
rish/: ETS.ipynb  Exercise_1.ipynb  Exercise_2.ipynb  Exercise_4.ipynb  week8.ipynb
submission/: week5.ipynb
yz/: week3.ipynb  week4.ipynb  week5.ipynb  week9.ipynb
